[package]
name = "riglet"
version = "0.1.1"
edition = "2021"
description = "Rust port of Figlet"
authors = ["Optics-Boss"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Optics-Boss/riglet"
keywords = ["figlet", "text", "ascii", "cli", "rust"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
